# STmining

./: .gitignore  LEARNING_GUIDE.md  README.md  pyproject.toml
configs/: metr_la.yaml  pems_bay.yaml
notebooks/: 01_data_and_windows.ipynb  02_baselines_and_metrics.ipynb  03_shared_mlp_and_training.ipynb  04_shared_lstm_and_sequence_modeling.ipynb  05_graph_and_spatial_message_passing.ipynb  06_stgcn_and_graph_ablation.ipynb  07_graph_direction_diagnostics.ipynb  08_static_gnn_node_classification.ipynb  09_graph_classification_and_transformer.ipynb  10_link_prediction_and_graph_autoencoder.ipynb  11_recommendation_and_lightgcn.ipynb  12_recommendation_graph_diagnostics.ipynb  13_knowledge_graph_and_rgcn.ipynb  14_heterogeneous_product_recommendation.ipynb  15_hgt_on_dblp.ipynb  16_temporal_graph_network.ipynb  17_scalable_gnn_neighbor_sampling.ipynb  18_gnn_failure_modes.ipynb  19_graph_self_supervision_and_pretraining.ipynb  20_graph_foundation_and_graph_language_models.ipynb  README.md
reports/: presentation_outline.md  research_report.md
src/crosscity/: __init__.py  cli.py  config.py  download.py  report.py  utils.py
src/crosscity/data/: __init__.py  (+13 more)
tests/: test_config.py  test_data.py  test_gnn_failure_modes.py  test_graph_classification.py  test_graph_foundation.py  test_graph_pretraining.py  test_heterogeneous_recommendation.py  test_heterogeneous_transformer.py  test_knowledge_graph.py  test_link_prediction.py  test_metrics.py  test_models.py  test_recommendation.py  test_scalable_gnn.py  test_static_gnn.py  test_temporal_graph.py  test_training.py
(+31 files in other folders)
