[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crosscity-stgcn"
version = "0.1.0"
description = "Reproducible cross-city few-shot traffic forecasting with PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "h5py>=3.9",
  "tables>=3.9",
  "PyYAML>=6.0",
  "torch>=2.2",
  "torch-geometric>=2.6,<3",
  "matplotlib>=3.7",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
crosscity = "crosscity.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
